--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -35,7 +35,7 @@
 \melbaauthors{Dalca and Sabuncu}  % Note: this one is also used to set the pdf 'authors' metadata
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
-\year{YYYY}  % The publication year
+\melbayear{YYYY}  % The publication year
 % \datesubmitted{m1/yyyy}  % Date submitted to MELBA: mm/yyyy
 % \datepublished{m2/yyyy}  % Today's date: mm/yyyy\
 
