Fix hyperref links ; use the proper option to hide the border

--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -1,4 +1,4 @@
-% v1.22 -- 2023/04/20
+% v1.23 -- 2023/05/02
 % For any question, please contact publishing-editor@melba-journal.org
 
 % This style file was based on the JLMR style file.
@@ -49,7 +49,7 @@
 \RequirePackage[dvipsnames]{xcolor}
 
 \if@usehyper
-\RequirePackage[colorlinks=false,allbordercolors={1 1 1}]{hyperref}
+\RequirePackage[hidelinks=true]{hyperref}
 \fi
 
 \if@abbrvbib
