Fix hyperref warning

--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -1,4 +1,4 @@
-% v1.23 -- 2023/05/02
+% v1.231 -- 2023/05/02
 % For any question, please contact publishing-editor@melba-journal.org
 
 % This style file was based on the JLMR style file.
@@ -49,7 +49,7 @@
 \RequirePackage[dvipsnames]{xcolor}
 
 \if@usehyper
-\RequirePackage[hidelinks=true]{hyperref}
+\RequirePackage[hidelinks]{hyperref}
 \fi
 
 \if@abbrvbib
