--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -32,6 +32,7 @@
 
 % Header and footer (will be filled at publication)
 \melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
+\doi{https://doi.org/10.59275/j.melba.2023-AAAA}
 \melbaauthors{Dalca and Sabuncu}  % Note: this one is also used to set the pdf 'authors' metadata
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
