Add MLCN2022 special issue

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -207,10 +207,10 @@
 
 	{\noindent \em Remainder omitted in this sample. }
 
-\section{Section}
-	\subsection{Subsection}
-		\subsubsection{Subsubsection}
-			\paragraph{Paragraph} Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+\section{Appendix section}
+	\subsection{Appendix subsection}
+		\subsubsection{Appendix subsubsection}
+			\paragraph{Appendix paragraph} Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
