Add data availability statement section

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -190,6 +190,8 @@
 % If no conflicts, please say "We declare we don't have conflicts of interest."
 \coi{The conflicts of interest have not been entered yet.}
 
+% Data availability
+\data{Authors submitting articles to \textsc{Melba} are required to include a Data Availability Statement in their manuscripts. The Data Availability Statement should clearly indicate whether the data supporting the findings of the study are available and, if so, how readers can access them. If the data are not available, authors should provide a brief justification for not sharing the data.}
 
 \bibliography{sample}
 
