--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -383,6 +383,10 @@
 \long\def\coi#1{\vskip 0.3in\noindent{\large\bf Conflicts of Interest}\vskip 0.2in
 	\noindent #1}
 
+% Data availability
+\long\def\data#1{\vskip 0.3in\noindent{\large\bf Data availability}\vskip 0.2in
+  \noindent #1}
+
 % Research Note
 \long\def\researchnote#1{\noindent {\LARGE\it Research Note} #1}
 
