Less ambiguous options documentation, fix bug for long editors list

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -4,6 +4,7 @@
 % - 'arxiv' in arXiv pre-print in submission (disable line numbers)
 % - 'accepted' for MELBA _accepted_ papers **only**;
 % - 'specialissue' for MELBA accepted papers that are part of a special issue.
+%                  to be used in conjunction with 'accepted'
 \usepackage{melba}
 
 \usepackage{mwe} % to get dummy images, only for the example
