--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -1,10 +1,10 @@
-% v1.33 -- 2023/11/10
+% v1.34 -- 2024/02/28
 % For any question, please contact publishing-editor@melba-journal.org
 
 % This style file was based on the JLMR style file.
 \usepackage{amsmath}
 \usepackage{lineno} % for line numbers. TODO: make this opnly called in submission
-\typeout{Document Style `melba-jmlr' v1.32 -- October 2023.}
+\typeout{Document Style `melba-jmlr' v1.34 -- February 2024.}
 
 \newif\if@abbrvbib\@abbrvbibfalse
 \DeclareOption{abbrvbib}{\@abbrvbibtrue}
@@ -307,6 +307,9 @@
 \else
   \fancypagestyle{titlepage}{%
     \fancyhf{}
+    \lhead{\scriptsize Journal of Machine Learning for Biomedical Imaging\\%
+    ~\\%
+    }
     \rhead{\scriptsize In submission\\~\\
     ~}
     \lfoot{\scriptsize \copyright\@melbayear~\@melbaauthors.~License:~\href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}\\~}
