Switch melba.sty to a .cls

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,24 +1,12 @@
-\documentclass[twoside,twocolumn,11pt]{article}
-
-% melba package. use options:
+\documentclass[accepted]{melba}
+% melba class has several options:
 % - 'arxiv' in arXiv pre-print in submission (disable line numbers)
 % - 'accepted' for MELBA _accepted_ papers **only**;
 % - 'specialissue' for MELBA accepted papers that are part of a special issue.
 %                  to be used in conjunction with 'accepted'
-\usepackage[accepted]{melba}
 
 \usepackage{mwe} % to get dummy images, only for the example
 % Can be removed for actual manuscripts
-
-
-% Any additional packages needed should be included after jmlr2e.
-% Note that jmlr2e.sty includes epsfig, amssymb, natbib and graphicx,
-% and defines many common macros, such as 'proof' and 'example'.
-%
-% It also sets the bibliographystyle to plainnat; for more information on
-% natbib citation styles, see the natbib documentation, a copy of which
-% is archived at http://www.jmlr.org/format/natbib.pdf
-
 
 % often used packages
 \usepackage{amsmath,amsfonts}
