--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -47,31 +47,17 @@
 
 % \firstname and \surname are optionnal, (simply using \name is doable), but can be useful
 % to clarify names such as \firstname FIRSTNAME MIDDLE NAME \surname FAMILYNAME or composed names
+
+% Notice that spacs left out (between name and orcid and affiliations will be displayed)
 \author{
-	\firstname Adrian V. \surname Dalca \aff{1,3},
-	\name Mert R. Sabuncu\orcid{0000-0002-7068-719X} \aff{2,3}
+	\firstname Adrian V. \surname Dalca\aff{1,3},
+	\name Mert R. Sabuncu\aff{2,3}\orcid{0000-0002-7068-719X}
 }
 \affiliations{
 	\num 1 \addr EECS, Massachusetts Institute of Technology, Cambridge, MA, USA \\
 	\num 2 \addr School of Electrical and Computer Engineering, Cornell University, Ithaca, NY, USA \\
 	\num 3 \addr Melba journal, The Internet, CERN, CH
 }
-
-
-
-
-\renewcommand{\familydefault}{\sfdefault}
-% \usepackage{fontspec}
-
-% \newfontfamily\EBInitF{EBGaramond-InitialsF1.otf}
-% \newfontfamily\EBInitFF{EBGaramond-InitialsF2.otf}
-\usepackage{lettrine}
-% \newcommand{\enluminure}[2]{\lettrine[lines=4,lhang=0.1,findent=0.5em,nindent=0em]{\large \initfamily \textcolor{black}{#1}}{\bfseries\textcolor{black}{#2}}}
-\newcommand{\enluminure}[2]{\lettrine[lines=3]{%
-\textcolor{melba}{#1}}{\bfseries\textcolor{black}{#2}}}
-
-% \usepackage[full]{textcomp}
-% \usepackage[swashQ,osf]{garamondx} % Actual project font
 
 \abstract{%   <- trailing '%' for backward compatibility of .sty file
 	We develop a learning framework for building deformable templates, which play a fundamental role in many image analysis and computational anatomy tasks. Conventional methods for template creation and image alignment to the template have undergone decades of rich technical development. In these frameworks, templates are constructed using an iterative process of template estimation and alignment, which is often computationally very expensive. Due in part to this shortcoming, most methods compute a single template for the entire population of images, or a few templates for  specific sub-groups of the data. In this work, we present a probabilistic model and efficient learning strategy that yields either universal or \textit{conditional} templates, jointly with a neural network that provides efficient alignment of the images to these templates. We demonstrate the usefulness of this method on a variety of domains, with a special focus on neuroimaging. This is particularly useful for clinical applications where a pre-existing template does not exist, or creating a new one with traditional methods can be prohibitively expensive.
@@ -91,7 +77,7 @@
 
 % Introduction (or first section)
 \section{Introduction}
-	\enluminure{A} deformable template is an image that can be geometrically deformed to match images in a dataset, providing a common reference frame. Templates are a powerful tool that enables the analysis of geometric variability. They have been used in computer vision, medical image analysis, graphics, and time series signals.
+	\enluminure{A}{deformable} \emph{template} is an image that can be geometrically deformed to match images in a dataset, providing a common reference frame. Templates are a powerful tool that enables the analysis of geometric variability. They have been used in computer vision, medical image analysis, graphics, and time series signals.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
