More instructions, update example DOI year

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -21,7 +21,7 @@
 
 % Header and footer (will be filled at publication)
 \melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
-\doi{https://doi.org/10.59275/j.melba.2023-AAAA}
+\doi{https://doi.org/10.59275/j.melba.2024-AAAA}
 \melbaauthors{Dalca and Sabuncu}  % Note: this one is also used to set the pdf 'authors' metadata
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
@@ -53,6 +53,7 @@
 	\firstname Adrian V. \surname Dalca\aff{1,3},
 	\name Mert R. Sabuncu\aff{2,3}\orcid{0000-0002-7068-719X}
 }
+% Authors are free to use either a new line (\\) or a simple comma (,) between affiliations.
 \affiliations{
 	\num 1 \addr EECS, Massachusetts Institute of Technology, Cambridge, MA, USA \\
 	\num 2 \addr School of Electrical and Computer Engineering, Cornell University, Ithaca, NY, USA \\
