Remove accepted option from melba-sample

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,4 +1,4 @@
-\documentclass[accepted]{melba}
+\documentclass{melba}
 % melba class has several options:
 % - 'arxiv' in arXiv pre-print in submission (disable line numbers)
 % - 'accepted' for MELBA _accepted_ papers **only**;
