--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -74,9 +74,8 @@
 % top matter
 \twocolumn[\maketitle]
 
-\vspace{1em}
-
 % Introduction (or first section)
+% \rule{\textwidth}{1pt}
 \section{Introduction}
 	\enluminure{A}{deformable} \emph{template} is an image that can be geometrically deformed to match images in a dataset, providing a common reference frame. Templates are a powerful tool that enables the analysis of geometric variability. They have been used in computer vision, medical image analysis, graphics, and time series signals.
 
